@@ -75,19 +75,11 @@ libgnomeinclude_HEADERS = \
 #
 # The GConf schema data installation voodoo
 #
-schemadir = $(sysconfdir)/gconf/schemas
-schema_DATA = \
-	libgnome.schema
+schemadir   = $(sysconfdir)/gconf/schemas
+schema_DATA = libgnome.schema
 
-libgnome-install-schema-data: $(schema_DATA)
-	for n in $+ ; do \
-		if test -e $$n ; then \
-			gconftool --install-schema-file=$$n ; \
-		else \
-			gconftool --install-schema-file=$(srcdir)/$$n ; \
-		fi ; \
-	done
-install-data-local: libgnome-install-schema-data
+install-data-local:
+	GCONF_CONFIG_SOURCE=$(GCONF_CONFIG_SOURCE) $(GCONFTOOL) --makefile-install-rule $(srcdir)/$(schema_DATA)
 
 
 # all autogenerated files need to be generated in the srcdir,
