@@ -1,3 +1,9 @@
+2001-10-18 Mark McLoughlin  <mark@skynet.ie>
+
+	* Makefile.am: simplify gconf install
+
+	* gnome-url.c (gnome_url_show): unref gconf client.
+
 Wed Oct 17 17:39:42 2001  George Lebl <jirka@5z.com>
 
 	* gnome-program.c: remove two unused fields from the private
