@@ -1,3 +1,7 @@
+2001-10-18  Mark McLoughlin  <mark@skynet.ie>
+
+	* configure.in: add gconf checks.
+
 2001-10-05  Pablo Saratxaga  <pablo@mandrakesoft.com>
 
 	* configure.in: Added Walloon (wa) to the languages list.
